--- a/gb/9/5/8/n2520054.md
+++ b/gb/9/5/8/n2520054.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fulfvx3112/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fulfvx3112/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fulfvx3112/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>法轮功创始人李洪志先生的传法故事 (二)</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2009/05/90511095130789-600x300.jpg" />
 <h6>一九九九年七月二十日后，李洪志先生离开纽约，在山中静观世间。(明慧网)
 </h6>
 <hr>
-	<p>【大纪元5月11日讯】（大纪元记者华明、唐恩综合报道）【编者按】早年的<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F%E5%AD%A6%E5%91%98.md#1">法轮功学员</a>亲眼目睹了法轮功创始人<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97.md#1">李洪志</a>先生的一言一行，亲身体验了法轮大法的神奇伟大。他们见证了法轮大法师尊的正直、谦和、慈祥；也见证了法轮大法师尊时时处处对弟子的呵护、点化、保护的神奇。</p>
-<p><ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F%E5%AD%A6%E5%91%98.md#1">法轮功学员</a>说：“我们见证了大法在世间为人袪病健身、教人向善，使人类社会道德迅速回升创建文明风尚等奇效，也见证了大法救度众生，开创宇宙新纪元等威严、神奇、玄妙和伟大。我们走过的路每一步都印证了法轮大法的好和共产党的邪恶。下面是北京一位1993年修练法轮功的学员的自述。</p>
+	<p>【大纪元5月11日讯】（大纪元记者华明、唐恩综合报道）【编者按】早年的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F%E5%AD%A6%E5%91%98.md#1">法轮功学员</a>亲眼目睹了法轮功创始人<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97.md#1">李洪志</a>先生的一言一行，亲身体验了法轮大法的神奇伟大。他们见证了法轮大法师尊的正直、谦和、慈祥；也见证了法轮大法师尊时时处处对弟子的呵护、点化、保护的神奇。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F%E5%AD%A6%E5%91%98.md#1">法轮功学员</a>说：“我们见证了大法在世间为人袪病健身、教人向善，使人类社会道德迅速回升创建文明风尚等奇效，也见证了大法救度众生，开创宇宙新纪元等威严、神奇、玄妙和伟大。我们走过的路每一步都印证了法轮大法的好和共产党的邪恶。下面是北京一位1993年修练法轮功的学员的自述。</p>
 <p><b> (接上文) http://epochtimes.com/gb/9/5/8/n2519615.md#1</b></p>
 <p><b>“当年曾有幸多次见到师尊”</b></p>
 <p>我是一九九三年修炼法轮功，当年曾有幸多次见到我们法轮功大法的师尊，回忆起来使我心情久久不能平静，当时那珍贵的一点点、一滴滴、一幕幕又清晰的展现在眼前，感慨万分。</p>
@@ -28,7 +28,7 @@
 <p>在天津班上有人问到师父为什么咳嗽的问题时，师尊也谈到了另外空间的干扰非常厉害与传法的艰难，因为他们认为人类该毁掉，这么好的法传给人太不值了。但大家都闯过来了。</p>
 <p>还说到现在为止，很多神佛看到有这么多人得法学法渐渐服气了，开始不反对师父传法了。理由是两个没想到：没想到十恶毒世还有这么多人向善，没想到还有这么多人能修的这么好。所以师尊说从这个班开始正式传功讲法了，讲得比以前深了，就是讲后来出版的《转法轮》的内容了，在此之前是预备阶段，主要从气功的角度讲《中国法轮功》的内容，再以后就只讲法不传功了。</p>
 <p>师父在开玩笑时还讲过，说不定以后什么时候想学功就得坐飞机到国外去学了，出口转内销。现在都应验了。</p>
-<p>当时有不少中国法轮功学员看到<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97.md#1">李洪志</a>师父讲法的时候，台上两边有阿弥陀佛和老子，还有八大金刚护法。前台跪满了佛、道、神，满场都是听法的另外空间的生命，门两侧和每排座位两边都有天兵天将把守。师父说在另外空间没人敢坐着听法，只有你们坐着。在师父后期的讲法中才谈到为什么这么珍视大法弟子，可惜我们在迷中却不知珍惜自己，有得到大法的人在这场中共发动的红色恐怖中走不过来，丢掉了这么珍贵的大法。</p>
+<p>当时有不少中国法轮功学员看到<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97.md#1">李洪志</a>师父讲法的时候，台上两边有阿弥陀佛和老子，还有八大金刚护法。前台跪满了佛、道、神，满场都是听法的另外空间的生命，门两侧和每排座位两边都有天兵天将把守。师父说在另外空间没人敢坐着听法，只有你们坐着。在师父后期的讲法中才谈到为什么这么珍视大法弟子，可惜我们在迷中却不知珍惜自己，有得到大法的人在这场中共发动的红色恐怖中走不过来，丢掉了这么珍贵的大法。</p>
 <p>当时我什么都不懂也看不到，像听故事一样，但能感到全场那种超常的庄严、肃穆和神圣的气氛，这场景至今仍在我脑海里。师尊每个班都严肃的要求大家上课不许迟到，为的是不能少听一个字，也不允许影响别人听课。现在我们才懂得了听好课的重要性。</p>
 <p>师尊办班收费很低，有时各种原因多收的钱都会退回去。我在两个班都碰到过不买票听课的情况，有人提问说没得到法轮，师父说你没买票当然不给你了，不失不得嘛，要想得下去补完票就会给的。</p>
 <p><b>师尊乘地铁去讲法</b></p>
@@ -73,7 +73,7 @@
 <p>我当时想为什么师尊只捐给见义勇为基金会呢？是不是因为见义勇为是真正的舍己为人啊。现在我悟到，如今大法弟子在这场正邪较量的巨难中，对自己承受的生死威胁于不顾，舍弃个人的一切，甚至不介意被救对象及多数人的误解，多年如一日，前仆后继的向中国人讲清真相，救人的这种自发的又是群体性的行为，不正是常人很难做到的吗？不正是真正的舍己救人见义勇为的最好见证吗？</p>
 <p><b>师尊对弟子的呵护</b></p>
 <p>由于我们长期迷在人中，习惯用人的方式思考问题，在修炼过程中做的好、做的差也常常不悟。伟大的师尊却无时无刻不在我们身边像慈父般看护着我们，利用周围的一切人和事点化我们，做对了给我们鼓励，做错了给我们提醒，摔倒了扶我们起来，犯了大罪都不会舍弃，这样一步一步带领我们走到今天。</p>
-<p>这十几年，无论在弘扬大法中、在遭受迫害中、在上访申诉中、在全面讲清真相中，在许许多多的场合中都有人问我同一个问题：“你见过<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97%E5%A4%A7%E5%B8%88.md#1">李洪志大师</a>吗?”当我给予肯定回答并讲述我的亲身经历时，无论是领导、同事、亲朋好友、一般群众，还是六一零人员、公安国安干警、监狱管教、预审、犯人等，都会相信我的话，再也没什么说的了。</p>
+<p>这十几年，无论在弘扬大法中、在遭受迫害中、在上访申诉中、在全面讲清真相中，在许许多多的场合中都有人问我同一个问题：“你见过<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97%E5%A4%A7%E5%B8%88.md#1">李洪志大师</a>吗?”当我给予肯定回答并讲述我的亲身经历时，无论是领导、同事、亲朋好友、一般群众，还是六一零人员、公安国安干警、监狱管教、预审、犯人等，都会相信我的话，再也没什么说的了。</p>
 <p>我很幸运，也很自豪，真的值得骄傲。</p>
 <p>“我见过师父”这一句话就足以让一切谎言、诬陷等不实之词通通见鬼去吧！见过慈悲的师父，从此改变了我的观念，改变了我的生活，改变了我整个世界里的一切。得到伟大的佛法是我人生中最值得庆幸的事、最重要的转折，大法早已溶入了我的每一个细胞，成了我生命的全部。</p>
 <p>蒙受师恩十几年，能记录下来的也只是一点点，写此文稿时都能感到自己沐浴在佛恩下的那种幸福、那种感动、那种美好、那种无限的慈悲中。大法弟子们正在以人的身躯、神的思想，实践着自己的史前大愿，创造著有史以来最大的辉煌。我能成为这其中的一份子真的是很荣幸。</p>
@@ -82,7 +82,7 @@
 <p>法轮功在台湾洪传十五年至今，已经有超过五十万人学炼法轮功，成立约一千个法轮功炼功点，遍布台湾各地，几乎每个乡镇都有炼功点，包括外岛的澎湖、金门、马祖也有十几个炼功点，台湾已成为全球仅次于中国大陆、最多华人修炼法轮功的地区。</p>
 <p><!--image v 1.0--></p>
 <div style="line-height: 90%; text-align: center;"><ahref="https://i.epochtimes.com/assets/uploads/2015/05/905072212431528.jpg"><br />
-<img class="size-medium wp-image-7410243" title="" src="https://i.epochtimes.com/assets/uploads/2015/05/905072212431528-450x333.jpg" alt="" width="450" b="333" /></a><span class="bn12">一九九九年海外中、英文媒体大幅报道关于法轮功的四·二五与七·二零事件。法轮功四·二五上访真相、中共导演的天安门自焚伪案真相、七.二中共镇压<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F%E7%9C%9F%E7%9B%B8.md#1">法轮功真相</a>仍被中共掩盖。明慧网图片</span></div>
+<img class="size-medium wp-image-7410243" title="" src="https://i.epochtimes.com/assets/uploads/2015/05/905072212431528-450x333.jpg" alt="" width="450" b="333" /></a><span class="bn12">一九九九年海外中、英文媒体大幅报道关于法轮功的四·二五与七·二零事件。法轮功四·二五上访真相、中共导演的天安门自焚伪案真相、七.二中共镇压<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F%E7%9C%9F%E7%9B%B8.md#1">法轮功真相</a>仍被中共掩盖。明慧网图片</span></div>
 <p><!-- --></p>
 <p><b>十年反迫害 教导法轮功学员秉持大善大忍</b></p>
 <p>一九九九年七月二十日中共与江氏集团动用整部国家机器迫害法轮功，动用一切媒体、司法、军警、特务、党政、外交，进行了全方位的镇压，对法轮功学员非法关押、洗脑、毒打、电刑、强奸、强迫注射破坏中枢神经药物，乃至活摘器官，惨无人道的迫害手段令人发指。迄今至少有三千二百六十三名法轮功学员被迫害致死，难以计数的无辜公民被绑架进看守所、劳教所、监狱、洗脑班、精神病院，被迫害致伤残、失学、失业、流离失所、家破人亡。</p>
@@ -108,42 +108,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/10/9/15/n3025549.md#1">澳洲茶花园的轶事</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/9/6/25/n2569302.md#1">名人传记：美国建国元勋富兰克林(38)</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/9/7/1/n2575788.md#1">陈卓光 判处麦道夫150年的华裔法官</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/9/6/23/n2567351.md#1">泰米尔猛虎组织创始人普拉巴卡兰</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/9/15/n3025549.md#1">澳洲茶花园的轶事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/6/25/n2569302.md#1">名人传记：美国建国元勋富兰克林(38)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/7/1/n2575788.md#1">陈卓光 判处麦道夫150年的华裔法官</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/6/23/n2567351.md#1">泰米尔猛虎组织创始人普拉巴卡兰</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546701.md#1" target="_blank">林辉：中共70年来杀了多少人？</a></li><li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/16/n3684317.md#1" target="_blank">我的人生，注定是一场修炼</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10099159.md#1" target="_blank">郑兢业：人吃与吃人（六）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/12/n7547010.md#1" target="_blank">人生绝望疑无路 修法轮功获重生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/30/n12653736.md#1">【命理】应享福或应受苦 命中有定数</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/10/3/n12449907.md#1">《圣经》与《推背图》预言的应验与变换12</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/4/n12665193.md#1">超逼真写实油画 描绘生活中的小小珍宝</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/27/n12647950.md#1">偶然的天意？康熙时钱币的预示</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/5/n12667639.md#1">猪有前世记忆：投人身长猪蹄 轮回中还业</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679813.md#1">【珍言真语】许丽明：不惧抓捕 港人坚守信念</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676676.md#1">【有冇搞错】如何度过黑暗时代</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680392.md#1">【珍言真语】钟剑华：滥捕只让人更鄙视港府</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676021.md#1">【更新】苹果谷歌下架Parler应用程序</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12678054.md#1">“我们都是川普”网民换头像斥推特封杀川普</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12678083.md#1">【重磅】蓬佩奥：解除美台交往限制</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676634.md#1">刘嘉玲自曝有洁癖 拍戏时曾换掉酒店房间马桶</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676343.md#1">身形暴瘦传患大病 张家辉停工一年首露面</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679612.md#1">女儿想要个妹妹 张梓琳反问“是弟弟咋办”</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679436.md#1">张檬晒素颜证件照 告诫后来人不要整容</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678338.md#1">黄秋生不爱火锅 评论“像厨余”吓坏KID</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677405.md#1">波兰房屋起火 “守护天使”盘旋空中</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678623.md#1">英媒：英军特种部队受训 抵抗外星人入侵</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12678002.md#1">病毒带来可怕精神疾病？精神科医师析4大原因</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12674814.md#1">【重播】全球确诊速升 除了口罩疫苗 自保这样做</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/4/n12666916.md#1">【线上活动】男人如何守护前列腺？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959398.md#1">【疫情最前线】意大利：中国没送任何东西！</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11957882.md#1">李文亮一女同事病逝 其夫涉嫌活摘器官</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955332.md#1">澳洲性侵案7罪名缠2年 男星高云翔获判无罪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11937754.md#1">他们为官怎能让老虎自动离界不扰人？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fulfvx3112/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fulfvx3112/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/5/8/n2520054.htm">法轮功创始人李洪志先生的传法故事 (二)</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/5/8/n2520054.htm">法轮功创始人李洪志先生的传法故事 (二)</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fulfvx3112/djy/blob/master/gb/9/5/8/n2520054.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fulfvx3112/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fulfvx3112/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fulfvx3112/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/9/5/8/n2520054.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
